syntax = "proto3";
package v1;
option go_package = "./todo-app";

import "google/protobuf/timestamp.proto";

message Todo {
  int64 id = 1;
  string title = 2;
  string description = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message CreateRequest {
  string api = 1;
  Todo todo = 2;
}

message CreateResponse {
  string api = 1;
  int64 id = 2;
}

message ReadRequest {
  string api = 1;
  int64 id = 2;
}

message ReadResponse {
  string api = 1;
  Todo todo = 2;
}

message UpdateRequest {
  string api = 1;
  Todo todo = 2;
}

message UpdateResponse {
  string api = 1;
  bool updated = 2;
}

message DeleteRequest {
  string api = 1;
  int64 id = 2;
}

message DeleteResponse {
  string api = 1;
  bool deleted = 2;
}

message ReadAllRequest {
  string api = 1;
}

message RealAllResponse {
  string api = 1;
  repeated Todo todods = 2;
}

service TodoService {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Read(ReadRequest) returns (ReadResponse);
  rpc Update(UpdateRequest) returns (UpdateResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
  rpc ReadAll(ReadAllRequest) returns (RealAllResponse);
}